# CudaBridge

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
docs/: ARCHITECTURE.md
docs/i18n/: README_EN.md  README_JA.md  README_ZH.md
scripts/: CudaBridgeConfig.cmake.in  cudabridge.pc.in  install.sh  package.sh  uninstall.sh
src/cli/: cudabridge_cli.c  cudabridge_cli.h
src/cuda/memory/: memory_manager.c  memory_manager.h
src/cuda/runtime/: cuda_runtime.c  cuda_runtime.h
src/driver/nvidia/: nvidia_gpu.c  nvidia_gpu.h
src/egpu/: egpu_safety.c  egpu_safety.h
src/kernel/pcie/: pcie_tunnel.c  pcie_tunnel.h
src/kernel/usb4/: usb4_controller.c  usb4_controller.h
src/logging/: cb_log.c  cb_log.h
src/python/: cudabridge.py  cudabridge_python.c  cudabridge_python.h
src/userspace/examples/: bandwidth_test.c  device_info.c  vector_add.c
src/userspace/include/: cudabridge.h
src/userspace/lib/: cudabridge.c
tests/: test_arm_compat.c  test_basic.c  test_memory.c  test_stream.c
